# Custom-Tools

./: .gitignore  README.md  pyproject.toml
src/CustomTools/: __init__.py
src/CustomTools/general/: file_handling.py
src/CustomTools/llm/: __init__.py  batching.py  calling.py  embedding.py
src/custom_tools.egg-info/: PKG-INFO  SOURCES.txt
